# ais_beast

./: CMakeLists.txt  README.md
ais_decoder/: CMakeLists.txt  aisutils.cpp  chunk.h  decoder.h  mem_pool.h  processing.h  queue.h  ringbuffer.h  strutils.h  tiff.h
ais_reader/: CMakeLists.txt  main.cpp
